# repo_bitcoin_blockchain

./: README.md  pyproject.toml
.ipynb_checkpoints/: trace-checkpoint.txt
Python-3.10.7/: Makefile  Makefile.pre  config.status
Python-3.10.7/Modules/: ld_so_aix
scripts/: identical.sh  init.sh  run.sh
src/: globals.py
src/core/: Block.py  Blockchain.py  Transaction.py
src/core/component_blockchain/: Block.py  Blockchain.py
src/core/component_node/: NewTransaction.py  Node.py  ThreadClient.py  ThreadConnection.py  ThreadServer.py
src/infrastructure/: Writer.py  serializer.py
src/web/: FlaskAppWrapper.py  ThreadFlask.py
src/web/templates/: blockchain.html  create_transactions.html  index.html  index_create_transactions.html  index_main.html
tests/: noeud2_blockchain.data  noeud423_blockchain.json  test_block.py  test_blockchain.py  test_jup.ipynb  test_threads_socket.py  test_transaction.py
