[tool.poetry]
name = "bitcoin-blockchain"
version = "0.1.0"
description = ""
authors = ["khaldi <jalalkhaldi3@gmail.com>"]
readme = "README.md"
packages = [{include = "bitcoin_blockchain"}]

[tool.poetry.dependencies]
python = "==3.10.7"
pycryptodome = "==3.17"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
